--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/bhurlow/scepter#readme",
   "dependencies": {
     "debug": "^2.2.0",
-    "dockerode": "^2.2.9"
+    "dockerode": "^2.2.9",
+    "event-stream": "^3.3.2",
+    "lodash": "^4.5.1"
   },
   "devDependencies": {
     "tape": "^4.4.0"
