--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "store and alert stderr events from your docker containers",
   "main": "index.js",
   "scripts": {
-    "test": "tape test.js"
+    "test": "tape test/*"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/bhurlow/scepter#readme",
   "dependencies": {
+    "dateformat": "^1.0.12",
     "debug": "^2.2.0",
     "dockerode": "^2.2.9",
     "event-stream": "^3.3.2",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "mailgun-js": "^0.7.7"
   },
   "devDependencies": {
     "tape": "^4.4.0"
