--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dockerode": "^2.2.9",
     "event-stream": "^3.3.2",
     "lodash": "^4.5.1",
-    "mailgun-js": "^0.7.7"
+    "mailgun-js": "^0.7.7",
+    "slack-client": "^2.0.2",
+    "slackbots": "^0.5.1"
   },
   "devDependencies": {
     "tape": "^4.4.0"
